--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width: 600px) {
+    body {
+        padding: .5rem !important;
+        margin: .5rem !important;
+    }
+}
+
 @media screen and (prefers-color-scheme: dark) {
     body {
         background-color: #444;
@@ -192,7 +199,6 @@ h2,
 .h2,
 h3,
 .h3 {
-    border-bottom: 2px solid rgb(229, 220, 220);
     margin-bottom: 1.15rem;
     padding-bottom: .5rem;
 }
@@ -242,7 +248,6 @@ code {
     justify-content: space-between;
     align-items: center;
     text-align: unset;
-    border-bottom: 2px solid rgb(229, 220, 220);
     margin-bottom: 1.15rem;
     padding-bottom: .5rem;
 }
@@ -255,6 +260,7 @@ code {
 
 header {
     margin-top: 2rem;
+    border-bottom: 2px solid rgb(229, 220, 220);
 }
 
 header ul {
